--- a/client/pages/Projects/ProjectForm/CreateProjectForm.module.scss
+++ b/client/pages/Projects/ProjectForm/CreateProjectForm.module.scss
@@ -5,6 +5,11 @@
     margin: 14px 0 0 0;
     width: 100%;
     border-radius: 3px;
+
+    .inputDescription {
+      color: rgb(96, 94, 92);
+      font-size: 10px;
+    }
   }
 
   .iconPicker {
