--- a/client/components/Autocomplete/Autocomplete.module.scss
+++ b/client/components/Autocomplete/Autocomplete.module.scss
@@ -3,13 +3,26 @@
 
   .suggestionContainer {
     .suggestion {
+      display: flex;
+      flex-direction: row;
       padding: 4px 16px;
       font-size: 14px;
       cursor: pointer;
+      
       &:hover {
         background-color: #cf5f00;
         color: #fff;
         font-weight: 500;
+      }
+
+      .suggestionValue {
+        font-size: initial;
+      }
+
+      .suggestionIcon {
+        padding: 0 8px 0 0;
+        width: 30px;
+        box-sizing: border-box;
       }
     }
   }
