--- a/client/pages/Projects/ProjectForm/CreateProjectForm.module.scss
+++ b/client/pages/Projects/ProjectForm/CreateProjectForm.module.scss
@@ -1,7 +1,7 @@
 .root {
   max-width: 450px;
 
-  .inputElement {
+  .inputField {
     margin: 14px 0 0 0;
     width: 100%;
     border-radius: 3px;
