--- a/client/components/Autocomplete/Autocomplete.module.scss
+++ b/client/components/Autocomplete/Autocomplete.module.scss
@@ -8,7 +8,7 @@
       padding: 4px 16px;
       font-size: 14px;
       cursor: pointer;
-      
+
       &:hover {
         background-color: #cf5f00;
         color: #fff;
@@ -25,5 +25,26 @@
         box-sizing: border-box;
       }
     }
+  }
+}
+
+.root {
+  .description {
+    color: rgb(96, 94, 92);
+    font-size: 10px;
+  }
+
+  .errorMessage {
+    animation-name: css-1, css-14;
+    animation-duration: 0.367s;
+    animation-timing-function: cubic-bezier(0.1, 0.9, 0.2, 1);
+    animation-fill-mode: both;
+    font-size: 12px;
+    font-weight: 400;
+    color: rgb(164, 38, 44);
+    margin: 0px;
+    padding-top: 5px;
+    display: flex;
+    align-items: center;
   }
 }
