--- a/client/components/Navigation/UserMenu/UserMenu.module.scss
+++ b/client/components/Navigation/UserMenu/UserMenu.module.scss
@@ -1,6 +1,3 @@
-$menu_height: 140px;
-$menu_width: 200px;
-
 .root {
   cursor: pointer;
   display: flex;
@@ -23,8 +20,8 @@ $menu_width: 200px;
 .menu {
   border-radius: 3px;
   padding: 15px 0 50px 0;
-  height: $menu_height;
-  width: $menu_width;
+  height: 140px;
+  width: 200px;
   z-index: 100;
   overflow: hidden;
 
