--- a/client/components/Navigation/UserMenu/UserMenu.module.scss
+++ b/client/components/Navigation/UserMenu/UserMenu.module.scss
@@ -19,8 +19,8 @@
 
 .menu {
   border-radius: 3px;
-  padding: 15px 0 50px 0;
-  height: 140px;
+  padding: 15px 0;
+  height: auto;
   width: 200px;
   z-index: 100;
   overflow: hidden;
