--- a/client/pages/Home/Home.module.scss
+++ b/client/pages/Home/Home.module.scss
@@ -1,24 +1,43 @@
 .root {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
 
-  .logo {
-    letter-spacing: 0.35rem;
-    font-size: 65px;
-    padding: 0.15rem 0.25rem 0.25rem 0.45rem;
-    background-color: #252422;
-    color: #fff;
-    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
-      sans-serif, Apple Color Emoji, Segoe UI Emoji;
-  }
+    .logo {
+        letter-spacing: 0.2rem;
+        font-size: 4rem;
+        padding: 0rem 0.9rem 0.2rem 1rem;
+        background-color: #252422;
+        color: #ffffff;
+        font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
+            sans-serif, Apple Color Emoji, Segoe UI Emoji;
+    }
 
-  .motto {
-    letter-spacing: 0.25rem;
-    font-size: 12px;
-    color: #252422;
-    padding: 8px;
-    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
-      sans-serif, Apple Color Emoji, Segoe UI Emoji;
-  }
+    .motto {
+        letter-spacing: 0.25rem;
+        font-size: 12px;
+        color: #252422;
+        padding: 8px;
+        font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
+            sans-serif, Apple Color Emoji, Segoe UI Emoji;
+    }
+
+    .signinbutton {
+        font-family: -apple-system,
+            BlinkMacSystemFont,
+            Segoe UI,
+            Helvetica,
+            Arial,
+            sans-serif,
+            Apple Color Emoji,
+            Segoe UI Emoji;
+        font-size: 1.2rem;
+        text-decoration: none;
+        background-color: #cf5f00;
+        margin-top: 1rem;
+        padding: 10px 15px 15px 15px;
+        border-radius: 3px;
+        line-height: 1;
+        color: #ffffff;
+    }
 }
