--- a/client/components/Navigation/UserMenu/UserSettings/UserSettings.module.scss
+++ b/client/components/Navigation/UserMenu/UserSettings/UserSettings.module.scss
@@ -3,7 +3,16 @@
 }
 
 .root {
+    &:hover .icon{
+        color: #ffffff;
+    }
   .inputContainer {
     margin: 5px 0 5px 0;
+  }
+  .icon{
+    vertical-align: sub;
+    font-size: 16px;
+    margin-right: 5px;
+    color: #cf5f00;
   }
 }
