--- a/client/pages/Home/Home.module.scss
+++ b/client/pages/Home/Home.module.scss
@@ -14,8 +14,8 @@
     }
 
     .motto {
-        letter-spacing: 0.25rem;
-        font-size: 12px;
+        font-size: 30px;
+        font-weight: 700;
         color: #252422;
         padding: 8px;
         font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
@@ -23,21 +23,20 @@
     }
 
     .signinbutton {
-        font-family: -apple-system,
-            BlinkMacSystemFont,
-            Segoe UI,
-            Helvetica,
-            Arial,
-            sans-serif,
-            Apple Color Emoji,
-            Segoe UI Emoji;
+        font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;
         font-size: 1.2rem;
         text-decoration: none;
-        background-color: #cf5f00;
+        background-color: #cf5f0022;
         margin-top: 1rem;
-        padding: 10px 15px 15px 15px;
-        border-radius: 3px;
+        padding: 8px 10vw 10px 10vw;
+        border-radius: 20px;
         line-height: 1;
-        color: #ffffff;
+        color: #cf5f00;
+        border:1px solid #cf5f0088;
+        transition: all .2s;
+        &:hover{
+            background-color:#cf5f00;
+            color: #f1f1f1;
+        }
     }
 }
