--- a/client/pages/Home/Home.module.scss
+++ b/client/pages/Home/Home.module.scss
@@ -6,6 +6,7 @@
     .logo {
         letter-spacing: 0.2rem;
         font-size: 4rem;
+        margin-top: 1rem;
         padding: 0rem 0.9rem 0.2rem 1rem;
         background-color: #252422;
         color: #ffffff;
@@ -17,9 +18,8 @@
         font-size: 30px;
         font-weight: 700;
         color: #252422;
-        padding: 8px;
-        font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
-            sans-serif, Apple Color Emoji, Segoe UI Emoji;
+        font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji;
+        margin: 2rem 5rem 4rem 6rem;
     }
 
     .signinbutton {
@@ -27,7 +27,6 @@
         font-size: 1rem;
         text-decoration: none;
         background-color: #cf5f0022;
-        margin-top: 1rem;
         padding: 8px 10vw 10px 10vw;
         border-radius: 20px;
         line-height: 1;
