--- a/client/pages/Home/Home.module.scss
+++ b/client/pages/Home/Home.module.scss
@@ -21,7 +21,8 @@
         font-weight: 700;
         color: #252422;
         font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji;
-        margin: 2rem 5rem 4rem 6rem;
+        margin: 2rem 5rem 4rem 5rem;
+        font-style: italic;
     }
 
     .signinbutton {
