--- a/views/index_template.hbs
+++ b/views/index_template.hbs
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Did</title>
+    <title>did</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <link rel="apple-touch-icon" sizes="180x180" href="/images/favicon/apple-touch-icon.png">
