--- a/client/components/FilterPanel/FilterItem/FilterItem.module.scss
+++ b/client/components/FilterPanel/FilterItem/FilterItem.module.scss
@@ -13,4 +13,10 @@
   .item {
     margin: 5px 0 0 0;
   }
+
+  .showAllLink {
+    margin: 10px 0 0 0;
+    cursor: pointer;
+    text-align: center;
+  }
 }
