--- a/client/pages/Admin/SummaryView/SummaryView.module.scss
+++ b/client/pages/Admin/SummaryView/SummaryView.module.scss
@@ -1,8 +1,9 @@
 .root {
-  .viewScopeSelector {
-    min-width: 120px;
-  }
-  .viewTypeSelector {
-    min-width: 120px;
+  .container {
+    padding: 10px 0 0 0;
+
+    .viewTypeSelector {
+      min-width: 120px;
+    }
   }
 }
