--- a/client/pages/Timesheet/ActionBar/ActionBar.module.scss
+++ b/client/pages/Timesheet/ActionBar/ActionBar.module.scss
@@ -6,6 +6,15 @@
     padding: 0 8px 0 8px;
   }
 
+  .reloadButton {
+    background: cornflowerblue;
+    border: none;
+    outline: none;
+    color: rgb(50, 49, 48);
+    font-weight: normal;
+    color: #fff;
+  }
+
   .confirmButton {
     background: rgb(223, 246, 221);
     border: none;
