--- a/client/components/Navigation/Navigation.module.scss
+++ b/client/components/Navigation/Navigation.module.scss
@@ -74,7 +74,8 @@
   background-color: #363533;
 
   .container {
-    padding: 0 6%;
+    padding: 0;
+    padding-left: 3%;
 
     .nav {
       display: flex;
@@ -82,6 +83,8 @@
       justify-content: space-evenly;
       width: 100%;
       padding-left: 0;
+      height: 100%;
+      margin-top: 0;
     }
 
     .logo {
